[package]
name = "conker_narrative"
version = "0.1.0"
edition = "2021"
description = "AI-Chat-friendly narrative generation utilities for Conker: Live & Uncut fan content."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Doctor0Evil/conker-live-and-uncut-fan"
authors = ["GAMEMODE.ai"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
conker_registry = { git = "https://github.com/Doctor0Evil/GAMEMODE.ai", branch = "main", package = "conker_registry" }
schemaguard = { git = "https://github.com/Doctor0Evil/GAMEMODE.ai", branch = "main" }

[features]
default = ["json-schema"]
json-schema = []
