[package]
name = "grid2scene"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grid2scene"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
blake3 = "1"
notify = "6"
chrono = "0.4"
glob = "0.3"
walkdir = "2"
